# glynn-cleaner

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  start.sh  test_output.csv
Tests/: test_cleaner_audit_mode.py  test_cleaner_dates.py  test_cleaner_duplicates.py  test_cleaner_junk_rows.py  test_cleaner_pipeline.py  test_cleaner_strict_mode.py  test_dates.py  test_dry_run_mode.py  test_email_disposable_loader.py  test_email_utils_integration.py  test_summary_only_mode.py
backend/: main.py
examples/: sample_dirty_data.csv
glynn_cleaner/: api.py  cleaner.py
glynn_cleaner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
glynn_cleaner/helpers/: email_disposable_loader.py
glynn_cleaner/utils/: date_helpers.py  email_suggestions.py
input/: sample_dirty_data.csv
output/: cleaned.csv  cleaned_audit_lenient.csv  cleaned_audit_lenient_report.txt  cleaned_audit_lenient_summary.csv  cleaned_audit_strict.csv  cleaned_audit_strict_report.txt  cleaned_audit_strict_summary.csv  cleaned_lenient.csv  cleaned_lenient_report.txt  cleaned_lenient_summary.csv  cleaned_output.csv  cleaned_output_report.txt  cleaned_output_summary.csv  cleaned_report.txt  cleaned_sample_report.txt  cleaned_sample_summary.csv  cleaned_strict.csv  cleaned_strict_report.txt  cleaned_strict_summary.csv  cleaned_summary.csv
