[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glynn-cleaner"
dynamic = ["version"]
description = "A polished command-line CSV cleaning tool with strict validation, summaries, reports, and progress indicators."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE" }
license-expression = "MIT"

authors = [
    { name = "Glynn Holland" }
]

keywords = [
    "csv",
    "data-cleaning",
    "cli",
    "validation",
    "automation",
    "data-quality"
]

dependencies = [
    "pandas>=2.0",
    "colorama>=0.4",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourusername/glynn-cleaner"
Source = "https://github.com/yourusername/glynn-cleaner"
Issues = "https://github.com/yourusername/glynn-cleaner/issues"

[project.scripts]
glynn-cleaner = "glynn_cleaner.cleaner:clean_data_cli"

[tool.setuptools.dynamic]
version = { attr = "glynn_cleaner.__version__" }

[tool.setuptools.packages]
find = { include = ["glynn_cleaner", "glynn_cleaner.*"] }

[project.optional-dependencies]
dev = ["pytest", "ruff", "build", "twine"]











