[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glynn-cleaner"
version = "1.3.0"
description = "A robust CSV cleaning tool with audit mode, strict validation, and detailed reporting."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Glynn Holland" }]
dependencies = ["pandas>=2.0"]

[project.scripts]
glynn-cleaner = "glynn_cleaner.cleaner:clean_data_cli"

[tool.setuptools.packages.find]
include = ["glynn_cleaner*"]











