[metadata]
name = glynn-cleaner
version = 1.0.0
author = Glynn
description = A fast, reliable, analyst-friendly CSV cleaning tool with audit mode and Excel-safe outputs.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/glynndev/glynn-cleaner
project_urls =
    Bug Tracker = https://github.com/glynndev/glynn-cleaner/issues

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pandas>=2.0
    python-dateutil>=2.8

[options.packages.find]
exclude =
    tests
